fix overflow on blog

--- a/website/src/styles/custom.css
+++ b/website/src/styles/custom.css
@@ -118,10 +118,6 @@ mobile-starlight-toc {
   }
 }
 
-pre:has(code) {
-  border-radius: 10px;
-}
-
 /* Hero section with gradient and pattern - Full Width */
 .hero {
   position: relative;
@@ -259,7 +255,7 @@ header a[href="/"] {
   color: var(--accent-color) !important;
 }
 
-.header {
+header {
   z-index: var(--sl-z-index-navbar);
   position: fixed;
   top: 0;
@@ -349,6 +345,35 @@ header a[href="/"] {
 /* Fix alignment of copy buttons in expressive-code blocks */
 .expressive-code {
     position: relative; /* Ensure positioning context for the copy button */
+}
+
+.expressive-code figure {
+    border-radius: 10px;
+}
+
+/* Reset */
+figure pre,
+figure figcaption {
+  border-radius: 0;
+}
+
+/* Case 1: figcaption exists AND has content */
+figure:has(figcaption:not(:empty)) figcaption {
+  border-radius: 10px 10px 0 0;
+}
+
+figure:has(figcaption:not(:empty)) pre {
+  border-radius: 0 0 10px 10px;
+}
+
+/* Case 2: figcaption exists but is empty */
+figure:has(figcaption:empty) pre {
+  border-radius: 10px;
+}
+
+
+figcaption.header {
+    padding: 8px 0;
 }
 
 .expressive-code .copy {
@@ -594,7 +619,7 @@ header a[href="/"] {
 
 .scroll-slide-up {
   opacity: 0;
-  transform: translateY(40px);
+  transform: translateY(10px);
   transition: opacity 0.7s ease-out, transform 0.7s ease-out;
 }
 
